data/derived/sp14/progs/unify/prog2565.ml.out
Characters 41-44:
  let f a x = let a = x in x(a) in
                            ^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
